--- a/index.html
+++ b/index.html
@@ -1236,7 +1236,15 @@
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
                                                     <p>------</p>
-                                                    <!-- <a href="documents/docx/" target="_blank"><i class="fa-regular fa-file-word"></i></a> -->
+                                                    <a href="documents/docx/GE1-Unit-1-Lesson-3.docx" target="_blank"><i class="fa-regular fa-file-word"></i> Lesson 3</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <p>------</p>
+                                                    <a href="documents/docx/GE1-Unit-1-Lesson-4.docx" target="_blank"><i class="fa-regular fa-file-word"></i> Lesson 4</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <p>------</p>
+                                                    <a href="documents/docx/GE1-Unit-1-Lesson-5.docx" target="_blank"><i class="fa-regular fa-file-word"></i> Lesson 5</a>
                                                 </li>
                                             </ul>
                                         </div>
